set scrollbar height

--- a/src/scrollbar.sass
+++ b/src/scrollbar.sass
@@ -1,15 +1,16 @@
 ::-webkit-scrollbar
-	width: 10px
 	background-color: #F5F5F5
+	height: 10px
+	width: 10px
 
 ::-webkit-scrollbar-track
-	border-radius: 10px
 	background: rgba(0,0,0,0.1)
+	border-radius: 10px
 	border: 1px solid #ccc
 
 ::-webkit-scrollbar-thumb
-	border-radius: 10px
 	background: linear-gradient(left, #fff, #e4e4e4)
+	border-radius: 10px
 	border: 1px solid #aaa
 
 ::-webkit-scrollbar-thumb:hover
