added empty panel stack

--- a/src/index.sass
+++ b/src/index.sass
@@ -3,7 +3,6 @@
 body
 	background: url(nasty-fabric.png)
 	font-family: Cantarell
-	margin: 0
 	user-select: none
 
 .particles
@@ -14,3 +13,20 @@ body
 	top: 0
 	width: 100vw
 	z-index: -1
+
+.content
+	height: 100vh
+	margin: auto
+	padding: 50px 0
+	width: 600px
+
+	& > .bp3-card
+		background: rgba(255, 255, 255, 0.8)
+		height: 100%
+		padding: 0
+
+.bp3-panel-stack
+	height: 100%
+
+	.bp3-panel-stack-view
+		background: transparent
