added example operating systems to disk

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,6 @@
 @import "scrollbar.sass"
 @import "OperatingSystems/Disk"
+@import "OperatingSystems/Disk/OperatingSystem"
 
 body
 	background: url(nasty-fabric.png)
