--- a/src/index.sass
+++ b/src/index.sass
@@ -1,6 +1,7 @@
 @import "scrollbar.sass"
 @import "OperatingSystems/Disk"
 @import "OperatingSystems/Disk/OperatingSystem"
+@import "OperatingSystems/Disk/OperatingSystem/Users"
 
 body
 	background: url(nasty-fabric.png)
