added option to blank password

--- a/src/index.sass
+++ b/src/index.sass
@@ -2,6 +2,7 @@
 @import "OperatingSystems/Disk"
 @import "OperatingSystems/Disk/OperatingSystem"
 @import "OperatingSystems/Disk/OperatingSystem/Users"
+@import "OperatingSystems/Disk/OperatingSystem/Users/User"
 
 body
 	background: url(nasty-fabric.png)
