--- a/src/index.sass
+++ b/src/index.sass
@@ -1,8 +1,8 @@
 @import "scrollbar.sass"
-@import "OperatingSystems/Disk"
-@import "OperatingSystems/Disk/OperatingSystem"
-@import "OperatingSystems/Disk/OperatingSystem/Users"
-@import "OperatingSystems/Disk/OperatingSystem/Users/User"
+@import "Disks/Disk"
+@import "Disks/Disk/OperatingSystem"
+@import "Disks/Disk/OperatingSystem/Users"
+@import "Disks/Disk/OperatingSystem/Users/User"
 
 body
 	background: url(nasty-fabric.png)
