--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,4 @@
-@import "scrollbar.sass"
+@import "scrollbar"
 @import "Disks/Disk"
 @import "Disks/Disk/OperatingSystem"
 @import "Disks/Disk/OperatingSystem/Users"
@@ -9,6 +9,12 @@ body
 	font-family: Cantarell
 	user-select: none
 
+#root
+	height: 100vh
+	margin: auto
+	padding: 50px 0
+	width: 600px
+
 .particles
 	height: 100vh
 	left: 0
@@ -18,19 +24,13 @@ body
 	width: 100vw
 	z-index: -1
 
-.content
-	height: 100vh
-	margin: auto
-	padding: 50px 0
-	width: 600px
-
-	& > .bp3-card
-		background: rgba(255, 255, 255, 0.8)
-		height: 100%
-		padding: 0
+.main-card
+	background: rgba(255, 255, 255, 0.8)
+	height: 100%
+	padding: 0
 
 .bp3-panel-stack
 	height: 100%
 
-	.bp3-panel-stack-view
-		background: transparent
+.bp3-panel-stack-view
+	background: transparent
