--- a/src/index.sass
+++ b/src/index.sass
@@ -25,12 +25,12 @@ body
 	z-index: -1
 
 .main-card
-	background: rgba(255, 255, 255, 0.8)
+	background: rgba(255, 255, 255, 0.8) !important
 	height: 100%
-	padding: 0
+	padding: 0 !important
 
 .bp3-panel-stack
 	height: 100%
 
 .bp3-panel-stack-view
-	background: transparent
+	background: transparent !important
