--- a/src/index.sass
+++ b/src/index.sass
@@ -1,8 +1,5 @@
 @import "scrollbar"
-@import "Disks/Disk"
-@import "Disks/Disk/OperatingSystem"
-@import "Disks/Disk/OperatingSystem/Users"
-@import "Disks/Disk/OperatingSystem/Users/User"
+@import "Disks"
 
 body
 	background: url(nasty-fabric.png)
