--- a/src/Disks/index.sass
+++ b/src/Disks/index.sass
@@ -1,1 +1,14 @@
 @import "Disk"
+
+.disks-wrapper
+	display: flex
+	flex-direction: column
+	height: 100%
+
+.disks
+	overflow: auto
+	flex-shrink: 0
+	flex-grow: 1
+
+.shutdown-wrapper
+	padding: 10px
